# Ludkerno

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Ludkerno.hpp  LudkernoLib.hpp  Makefile  README.md  Sprites.rpk  assets.rpk  index.md  main.cpp  my.rc  my.res  web.ps1
Assets/: Sprites.rpk  code.rpc
Docs/html/: _camera_8hpp.html  _camera_8hpp__incl.dot  _camera_8hpp_source.html  _collider_8hpp.html  _collider_8hpp__dep__incl.dot  _collider_8hpp__incl.dot  _collider_8hpp_source.html  _collision_system_8hpp.html  _collision_system_8hpp__incl.dot  _collision_system_8hpp_source.html  _component_8hpp.html  _component_8hpp__dep__incl.dot  _component_8hpp__incl.dot  _component_8hpp_source.html  _component_list_8hpp.html  _component_list_8hpp__incl.dot  _component_list_8hpp_source.html  _debug_8hpp.html  _debug_8hpp.js  _debug_8hpp__dep__incl.dot  _debug_8hpp__incl.dot  _debug_8hpp_source.html  _entity_8hpp.html  _entity_8hpp__dep__incl.dot  _entity_8hpp__incl.dot  _entity_8hpp_source.html  _entity_m_n_g_r_8hpp.html  _entity_m_n_g_r_8hpp__incl.dot  _entity_m_n_g_r_8hpp_source.html  _game_8hpp.html  _game_8hpp.js  _game_8hpp__dep__incl.dot  _game_8hpp__incl.dot  _game_8hpp_source.html  _key_8hpp.html  _key_8hpp__dep__incl.dot  _key_8hpp__incl.dot  _key_8hpp_source.html  _platform_physics_8hpp.html  _platform_physics_8hpp__dep__incl.dot  (+193 more)
Docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.html  all_11.js  all_12.html  all_12.js  all_13.js  all_14.html  all_14.js  all_15.html  all_15.js  all_16.html  all_16.js  (+140 more)
GameCode/: Cactus.hpp  Cena.hpp  Generator.hpp  Input.hpp  PlatformScene.hpp  PlatformerInput.hpp  SandScene.hpp  TileScene.hpp
Implement/: Collider.cpp  CollisionSystem.cpp  Debug.cpp  Entity.cpp  Game.cpp  Input.Deactivated  List.cpp  PkgMngr.cpp  Scene.cpp  SceneMngr.cpp  Sprite.Deactivated  Sprite.cpp  TextureMngr.cpp  Tilemap.cpp  Transform.Deactivated  Transform.cpp  Utils.cpp  Vector2.cpp
Toolchain/: LICENSE-Windres  README-Windres
include/: Camera.hpp  CollisionHandler.hpp  CollisionSystem.hpp  Component.hpp  ComponentList.hpp  Debug.hpp  Entity.hpp  EntityMNGR.hpp  Game.hpp  Interpreter.hpp  Key.hpp  Ludkerno.hpp  Object.hpp  Object2D.hpp  PkgMngr.hpp  RadiPako.h  RadiPako.hpp  RenderPipeline.hpp  Sand.hpp  SandSimEnv.hpp  Scene.hpp  SceneMngr.hpp  Screen.hpp  TextureMngr.hpp  TileLayer.hpp  Tilemap.hpp  Transform.hpp  Utils.hpp  Vector2.hpp
include/Components/: Cactus.hpp  Collider.hpp  Generator.hpp  Input.hpp  PlatformPhysics.hpp  Poligonal.hpp  Sand.hpp  Sprite.hpp  Transform.hpp
src/: Collider.cpp  CollisionSystem.cpp  Debug.cpp  Entity.cpp  EntityMngr.cpp  Game.cpp  List.cpp  Object2D.cpp  RenderPipeline.cpp  Scene.cpp  SceneMngr.cpp  Sprite.cpp  TextureMngr.cpp  TileLayer.cpp  Tilemap.cpp  Utils.cpp  Vector2.cpp
(+1 files in other folders)
